--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -std=c++14 -Wall -MMD 
 EXEC = cs246final
-OBJECTS = main.o Chessboard.o Square.o Piece.o Pawn.o Knight.o Bishop.o Rook.o Queen.o King.o studio.o Empty.o
+OBJECTS = main.o Chessboard.o Square.o Piece.o Pawn.o Knight.o Bishop.o Rook.o Queen.o King.o studio.o Empty.o Player.o Human.o Computer.o
 DEPENDS = ${OBJECTS:.o=.d}
 
 ${EXEC}: ${OBJECTS}
